add actual 'tickets.json',change serialization logic