@@ -1,7 +1,12 @@
 package shadrin.dev.json_app_parser.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.DeserializationFeature;
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.datatype.jsr310.deser.LocalTimeDeserializer;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import shadrin.dev.json_app_parser.parser.JsonParser;
@@ -15,10 +20,10 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.time.Duration;
+import java.text.SimpleDateFormat;
+import java.time.*;
 
-import java.time.ZoneId;
-import java.time.ZonedDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -32,7 +37,7 @@ import java.util.stream.Collectors;
 public class FlightTicketService implements JsonParser {
     private final FileProperties fileProperties;
 
-    @Autowired
+
     public FlightTicketService(FileProperties fileProperties) {
         this.fileProperties = fileProperties;
     }
@@ -41,30 +46,45 @@ public class FlightTicketService implements JsonParser {
     public List<FlightTicket> parse() throws IOException {
         try {
             String filePath = fileProperties.getFilePath();
-            // Поддержка classpath путей
-            if (filePath.startsWith("classpath:")) {
-                filePath = filePath.substring(10); // Убираем "classpath:"
-                InputStream is = getClass().getClassLoader().getResourceAsStream(filePath);
-                if (is == null) {
-                    throw new FileNotFoundException("File not found in classpath: " + filePath);
-                }
-                String content = new String(is.readAllBytes());
-                ObjectMapper objectMapper = new ObjectMapper();
-                objectMapper.registerModule(new JavaTimeModule());
-                var ticket = objectMapper.readValue(content, FlightTicket.class);
-                return ticket.getTickets();
-            } else {
-                String content = new String(Files.readAllBytes(Paths.get(filePath)));
-                ObjectMapper objectMapper = new ObjectMapper();
-                objectMapper.registerModule(new JavaTimeModule());
-                var ticket = objectMapper.readValue(content, FlightTicket.class);
-                return ticket.getTickets();
+            String content = new String(Files.readAllBytes(Paths.get(filePath)));
+            content = content.replace("\uFEFF", ""); //удаление bom-символа
+
+            ObjectMapper mapper = new ObjectMapper();
+
+            // используем модуль java-time для кастомного формата
+            JavaTimeModule timeModule = new JavaTimeModule();
+            timeModule.addDeserializer(LocalTime.class, new LocalTimeDeserializer(
+                    DateTimeFormatter.ofPattern("H:mm")
+            ));
+
+            mapper.registerModule(timeModule);
+            mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
+
+            JsonNode rootNode = mapper.readTree(content);
+            JsonNode ticketsNode = rootNode.get("tickets");
+
+            if (ticketsNode == null || !ticketsNode.isArray()) {
+                throw new IOException("Invalid JSON structure: 'tickets' array not found");
             }
+
+            List<FlightTicket> tickets = mapper.readValue(
+                    ticketsNode.traverse(),
+                    new TypeReference<List<FlightTicket>>() {
+                    }
+            );
+
+            return tickets.stream()
+                    .filter(t -> t.getOriginName() != null)
+                    .filter(t -> t.getDestinationName() != null)
+                    .collect(Collectors.toList());
+
         } catch (IOException ex) {
             System.err.println("File reading error: " + ex.getMessage());
             return Collections.emptyList();
         }
+
     }
+
 
 
     /**
@@ -72,8 +92,8 @@ public class FlightTicketService implements JsonParser {
      */
     public Map<String, String> calculateMinFlightTime(List<FlightTicket> tickets) {
         return tickets.stream()
-                .filter(ticket -> "Vladivostok".equalsIgnoreCase(ticket.getOriginName()) &&
-                        "Tel Aviv".equalsIgnoreCase(ticket.getDestinationName()))
+                .filter(ticket -> "Владивосток".equalsIgnoreCase(ticket.getOriginName()) &&
+                        "Тель-Авив".equalsIgnoreCase(ticket.getDestinationName()))
 
                 .collect(Collectors.groupingBy(FlightTicket::getCarrier,
                         Collectors.minBy(Comparator.comparing(this::calculateFlightDuration))))
@@ -114,8 +134,8 @@ public class FlightTicketService implements JsonParser {
 
     public BigDecimal calculatePriceDifference(List<FlightTicket> tickets) {
         List<BigDecimal> prices = tickets.stream()
-                .filter(ticket -> "Vladivostok".equalsIgnoreCase(ticket.getOriginName()) &&
-                        "Tel Aviv".equalsIgnoreCase(ticket.getDestinationName()))
+                .filter(ticket -> "Владивосток".equalsIgnoreCase(ticket.getOriginName()) &&
+                        "Тель-Авив".equalsIgnoreCase(ticket.getDestinationName()))
                 .map(FlightTicket::getPrice)
                 .sorted()
                 .collect(Collectors.toList());
